--- a/admin/css/telefication-admin.css
+++ b/admin/css/telefication-admin.css
@@ -2,23 +2,49 @@
  * All of the CSS for telefication admin-specific functionality.
  */
 
+.nav-tab-wrapper {
+	border-bottom : 1px solid #e3e3e3 !important;
+}
+
+.nav-tab {
+	border        : 1px solid #e3e3e3;
+	border-bottom : none;
+	border-radius : 3px 3px 0 0;
+}
+
+.nav-tab-active {
+	background-color : #FFF;
+	border-bottom    : 1px solid #fff;
+}
+
+.nav-tab-active:hover {
+	background-color : #FFF;
+	border-bottom    : 1px solid #fff;
+}
+
 .telefication-wrapper {
-	background-color: #fff !important;
-	border: 1px solid #e3e3e3;
-	border-radius: 3px;
-	padding: 20px;
+	background-color : #fff !important;
+	border           : 1px solid #e3e3e3;
+	border-top       : none;
+	border-radius    : 0 0 3px 3px;
+	padding          : 20px;
+}
+
+.hide {
+	display : none;
 }
 
 .telefication-wrapper #chat_id {
-	direction: ltr;
+	direction : ltr;
 }
 
-.telefication-wrapper #match_emails {
-	direction: ltr;
-	width: 50%;
+.telefication-wrapper #match_emails, .telefication-wrapper #bot_token {
+	direction : ltr;
+	width     : 50%;
 }
 
-.telefication-footer-note .dashicons{
-	font-size: 16px;
-	padding-top: 3px;
+.telefication-footer-note .dashicons {
+	font-size   : 16px;
+	padding-top : 3px;
 }
+
